完成struts起始配置任务